# soranium

./: Cargo.toml  README.md
src/: lib.rs  main.rs  mining.rs  pool.rs  staking.rs  trading.rs  units.rs
src/token/: mod.rs  sosshitsu.rs  trait_value.rs
swap-api/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
swap-api/assets/: stas3-template.txt
swap-api/public/: index.html
swap-api/src/: arc.ts  bytes.ts  config.ts  fastsign.ts  keys.ts  orderbook.ts  selftest.ts  server.ts  sighash.ts  tx.ts
swap-api/src/bench/: fixtures.ts  runner.ts  worker.ts
swap-api/src/stas/: constants.ts  descriptor.ts  script.ts  swap.ts  unlock.ts
